fixed scrollbar

--- a/src/styles/Chat.scss
+++ b/src/styles/Chat.scss
@@ -1,5 +1,5 @@
 .chat-app {
-    width: 100%;
+  width: 100%;
   /* Chat container styles */
   .chat-container {
     display: flex;
@@ -7,6 +7,8 @@
     align-items: flex-start;
     padding: 10px;
     margin: 0 auto;
+    max-height: 500px;
+    overflow-y: scroll;
   }
 
   /* Message styles */
